<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--    TODO: There are some changes required in css-parent pom, although it works     -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>io.alw.css</groupId>
    <artifactId>css-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <description>Common definition for Cashflow Settlement Services</description>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!--        - Buildpack related -
             Docker defaults is configured below. ie; no binding required.
             When podman is used, the relevant maven profile will be activated with proper values. Default is docker.
        -->
        <docker.host>NO_VALUE_NULL</docker.host>
        <docker.bindHostToBuilder>false</docker.bindHostToBuilder>

        <!--        Non-Test     -->
        <avro.version>1.12.0</avro.version>
        <confluent.avro.serializer.version>7.9.1</confluent.avro.serializer.version>
        <ignite.version>2.16.0</ignite.version>
        <oracleDriver.version>23.6.0.24.10</oracleDriver.version>
        <h2Driver.version>2.3.232</h2Driver.version>
        <record.builder.version>52</record.builder.version>
        <slf4j.version>2.0.13</slf4j.version>
        <jakarta-validation-api.version>3.1.0</jakarta-validation-api.version>
        <mapstruct.version>1.6.3</mapstruct.version>


        <!--        Test        -->
        <junit.version>5.10.3</junit.version>
        <assertj.version>3.26.0</assertj.version>
        <mockito-core.version>5.20.0</mockito-core.version>
        <mockito.core.jar>${env.MAVEN_REPO}/org/mockito/mockito-core/5.20.0/mockito-core-5.20.0.jar</mockito.core.jar>
        <!--        Plugins     -->
        <!--        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>-->
        <!--        <maven-surefire-plugin.version>3.4.0</maven-surefire-plugin.version>-->
        <!--        <maven-failsafe-plugin.version>3.4.0</maven-failsafe-plugin.version>-->

        <maven-surefire-plugin.skip>false</maven-surefire-plugin.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>io.soabase.record-builder</groupId>
            <artifactId>record-builder-core</artifactId>
            <version>${record.builder.version}</version>
            <scope>provided</scope>
        </dependency>

        <!--        Test        -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!--        DB Drivers; Both Oracle and H2 are user-->
            <dependency>
                <groupId>org.apache.ignite</groupId>
                <artifactId>ignite-core</artifactId>
                <version>${ignite.version}</version>
            </dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2Driver.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.database.jdbc</groupId>
                <artifactId>ojdbc11</artifactId>
                <version>${oracleDriver.version}</version>
            </dependency>

            <!--            Other common dependencies-->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <defaultGoal>clean install</defaultGoal>
        <finalName>${project.artifactId}:${project.version}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <!--                <version>${maven-compiler-plugin.version}</version>-->
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <!--                    <compilerArgs>-->
                    <!--                        &lt;!&ndash;                        <compilerArg>&#45;&#45;release 23</compilerArg>&ndash;&gt;-->
                    <!--                        &lt;!&ndash;                        <compilerArg>&#45;&#45;enable-preview</compilerArg> &lt;!&ndash; both enable-preview and source release version cannot be set at the same time&ndash;&gt;&ndash;&gt;-->
                    <!--                    </compilerArgs>-->
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.soabase.record-builder</groupId>
                            <artifactId>record-builder-processor</artifactId>
                            <version>${record.builder.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <!--        Useful Resources:
                                                        https://paketo.io/docs/reference/java-reference/#memory-calculator
                                                        https://docs.spring.io/spring-boot/maven-plugin/build-image.html
                                                        https://paketo.io/docs/howto/java/
                                                        https://paketo.io/docs/howto/sbom/#access-the-software-bill-of-materials-on-a-sample-application
                                                        https://buildpacks.io/docs/for-app-developers/concepts/buildpack/
                                                        https://buildpacks.io/docs/for-buildpack-authors/
                                                        https://paketo.io/docs/reference/builders-reference/
                                                        https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/concepts/trusted_builders/#what-is-a-trusted-builder
                                                        https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/cli/pack/
                                                        https://buildpacks.io/docs/for-app-developers/how-to/build-outputs/
                                                        https://buildpacks.io/docs/for-app-developers/how-to/special-cases/use-http-proxy/
                                                        -->
                        <docker>
                            <host>${docker.host}</host>
                            <bindHostToBuilder>${docker.bindHostToBuilder}</bindHostToBuilder>
                            <!--                            <publishRegistry>-->
                            <!--                                <url>${docker.publishRegistry.url}</url>-->
                            <!--                                <username>${docker.publishRegistry.username}</username>-->
                            <!--                                <password>${docker.publishRegistry.password}</password>-->
                            <!--                            </publishRegistry>-->
                        </docker>
                        <!--        NOTE: Buildpack builds and runs as non-root as per the security standard. No explicit config is needed         -->
                        <!--        Enable SpringBoot layers         -->
                        <layers>
                            <enabled>true</enabled>
                        </layers>
                        <image>
                            <!--        NOTE:   The JVM used by default is Liberica JVM which is free for use. Good that it is not Adoptium's jdk
                                                To change JVM to another supported one, see: https://paketo.io/docs/howto/java/#use-an-alternative-jvm         -->
                            <name>alw.io/css/${build.finalName}</name>
                            <applicationDirectory>/css</applicationDirectory>
                            <builder>docker.io/paketobuildpacks/builder-noble-java-tiny:latest</builder> <!--docker.io/paketobuildpacks/ubuntu-noble-builder-->
                            <!-- <imagePlatform>linux/amd64</imagePlatform>-->
                            <!-- <command>/workspace/entrypoint.sh</command>   NOTE: not needed, may use distroless image with no shell in the future -->

                            <env>
                                <!--        SPRING         -->
                                <BP_SPRING_CLOUD_BINDINGS_DISABLED>true</BP_SPRING_CLOUD_BINDINGS_DISABLED>
                                <!--        MAVEN         -->
                                <BP_MAVEN_BUILD_ARGUMENTS>-Dmaven.test.skip=true</BP_MAVEN_BUILD_ARGUMENTS>
                                <!--        BOM         -->
                                <BP_OCI_SOURCE>https://github.com</BP_OCI_SOURCE>

                                <!--        JVM AND RELATED        -->
                                <!--        NOTE:   A buildpack supports only a specific jdk version.
                                                    To use an updated jdk(ex: 26.0.2 instead of 26.0.1) an updated buildpack version need to be used         -->
                                <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
                                <BP_JVM_TYPE>JRE</BP_JVM_TYPE>    <!--NOTE: May not be needed as jlink is used-->
                                <BP_JLINK_ENABLED>true</BP_JLINK_ENABLED>
                                <!--        NOTE:   Specifying headroom explicitly although the buildpack's default headroom size is zero.
                                                    "Headroom is a percentage of the container’s total memory that can be excluded from the memory calculator’s algorithm and left for non-JVM operations."
                                                    See the java buildpack's note on memory calculator to understand better-->
                                <BPL_JVM_HEAD_ROOM>0</BPL_JVM_HEAD_ROOM>
                                <BP_JLINK_ARGS>
                                    --no-man-pages
                                    --no-header-files
                                    --strip-debug
                                    --compress=2
                                </BP_JLINK_ARGS>

                                <!--        ABOUT MEMORY LIMITS
                                            ===================

                                            NOTE:   Read below notes on memory limit, check how the java memory calculator works, the formula used to calculate heap and non-heap sizes.
                                                    The non-heap size stays static for a given app that does not operate on non-heap.
                                                        Ex: For a container with 1GB memory, total non-heap usage could be approximately as below:
                                                            Direct Memory(10M), JVM Code Cache(240M), Metaspace(112M), Thread Stacks(250M)
                                                            This sums up as 612M of non-heap usage leaving only 412M for heap usage
                                                    BPL_JVM_THREAD_COUNT:   If the app uses less thread count than the default(250), then explicitly setting the count via this env will help to increase the memory available for heap.

                                            NOTE:  - Memory limit -
                                                     Unlike Dockerfile method, no max memory percent usage limit need to be set explicitly.
                                                     Because buildpack does a better job in determining memory headroom, thread count, loaded class count etc

                                            NOTE:  - NMT tracking: BPL_JAVA_NMT_ENABLED -
                                                    'Java Native Memory Tracking' defaults to true, but comes with compute/CPU cost(5-10%) in detail mode for app using native memory heavily.
                                                     Java Buildpack enables this by default in summary mode. The CPU and memory overhead is expected to be negligible.
                                                     In case OOM happens due potentially due to its' memory overhead, add head room explicitly via 'BPL_JVM_HEAD_ROOM'
                                -->

                                <!--        NOTE:  - Including/Excluding other files during app build stage -
                                                     Use a single tag with glob patterns separated by colons -->
                                <!--                                <BP_INCLUDE_FILES>src/main/resources/config.yaml:scripts/*.sh:certs/internal-ca.crt</BP_INCLUDE_FILES>-->
                                <!--                 Exclude local testing tools or temporary logs within those paths -->
                                <!--                                <BP_EXCLUDE_FILES>scripts/local-test-tool.sh:docs/*.tmp:**/*.log</BP_EXCLUDE_FILES>-->
                            </env>

                            <!--            NOTE:   - Specifying buildpacks explicitly -
                                                      Specifying buildpacks explicitly require to explicitly specify the entire pipeline -->
                            <!--                            <buildpacks>-->
                            <!--                                <buildpack>urn:cnb:builder:paketo-buildpacks/ca-certificates</buildpack>-->
                            <!--                                <buildpack>urn:cnb:builder:paketo-buildpacks/bellsoft-liberica</buildpack>-->
                            <!--                                <buildpack>urn:cnb:builder:paketo-buildpacks/syft</buildpack>-->
                            <!--                                <buildpack>urn:cnb:builder:paketo-buildpacks/executable-jar</buildpack>-->
                            <!--                                <buildpack>urn:cnb:builder:paketo-buildpacks/spring-boot</buildpack>-->
                            <!--                            </buildpacks>-->

                            <publish>false</publish>
                            <!-- https://docs.spring.io/spring-boot/maven-plugin/build-image.html#build-image.examples.caches-->

                            <buildCache>
                                <volume>
                                    <name>cache-${project.artifactId}.build</name>
                                </volume>
                            </buildCache>
                            <launchCache>
                                <volume>
                                    <name>cache-${project.artifactId}.launch</name>
                                </volume>
                            </launchCache>
                            <!--                        <registry>-->
                            <!--                            <username>${env.REGISTRY_USER}</username>-->
                            <!--                            <password>${env.REGISTRY_PASSWORD}</password>-->
                            <!--                        </registry>-->
                        </image>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skip>${maven-surefire-plugin.skip}</skip>
                        <argLine>
                            -Dnet.bytebuddy.experimental=true -javaagent:${mockito.core.jar}
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>podman-linux</id>
            <activation>
                <property>
                    <name>env.XDG_RUNTIME_DIR</name> <!-- Most linux systems have this env set. So the profile will be activated automatically -->
                </property>
            </activation>
            <properties>
                <docker.host>unix://${env.XDG_RUNTIME_DIR}/podman/podman.sock</docker.host>
                <docker.bindHostToBuilder>true</docker.bindHostToBuilder>
            </properties>
        </profile>
        <!-- Podman on macOS/Windows-->
        <profile>
            <id>podman</id>
            <properties>
                <docker.host>unix://${user.home}/.local/share/containers/podman/machine/podman.sock</docker.host>
                <docker.bindHostToBuilder>true</docker.bindHostToBuilder>
            </properties>
        </profile>
        <profile>
            <activation>
                <property>
                    <name>proj.build.dir</name>
                </property>
            </activation>
            <id>ProjBuildDirectoryRoot</id>
            <build>
                <directory>${proj.build.dir}</directory>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>confluent</id>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>
</project>
